--- a/src/components/CSS/Lists.css
+++ b/src/components/CSS/Lists.css
@@ -3,13 +3,13 @@
   flex-direction: column;
   align-items: center;
   padding: 5vw;
-  height: 100dvh;
+  min-height: 100dvh;
   background-color: blue;
 }
 
 .list-item {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: start;
   border: 5px solid white;
   width: 20rem;
