program can manipulate data for now program hasn't validated form yet and have minor bugs about position

--- a/src/components/CSS/FormLIst.css
+++ b/src/components/CSS/FormLIst.css
@@ -1,4 +1,4 @@
-.container {
+.container-add {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,6 +9,26 @@
   /*? Left and top are 50% adjust our top-left to middle of vh */
   /*? and we translate -50% of width and height of container to center a container */
   position: fixed; /** our container on the position that we set and dynamic when we scroll down or up */
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  padding: 5rem 4rem; /* vertical horizontal */
+  border-radius: 10%;
+}
+.container-patch {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rebeccapurple;
+
+  /*! center windows */
+  /*? Left and top are 50% adjust our top-left to middle of vh */
+  /*? and we translate -50% of width and height of container to center a container */
+  position: fixed; /** our container on the position that we set and dynamic when we scroll down or up */
+  z-index: 2;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
