--- a/src/components/CSS/Lists.css
+++ b/src/components/CSS/Lists.css
@@ -1,14 +1,29 @@
-.lists {
+.body {
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  /* padding: 5vw; */
   padding-top: 1.5dvw;
-  /* width: 100dvw; */
   max-width: 100dvw;
   min-height: 100dvh;
-  background-color: blue;
+  background-color: rgb(31, 65, 114);
+}
+
+.lists-container {
+  margin: 1rem;
+}
+
+.btn-sort {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.btn-sort button {
+  font-size: 0.8em;
+  border: none;
+  border-radius: 5%;
+  padding: 0em 0.5em;
 }
 
 .list-item {
@@ -16,9 +31,9 @@
   display: flex;
   flex-direction: row;
   justify-content: start;
-  border: 5px solid white;
-  width: 20rem;
+  width: 30em;
+  overflow: hidden;
   padding: 1.51rem 1rem;
-  border-radius: 10%;
+  border-radius: 0%;
   margin: 0.5rem;
 }
