--- a/src/components/CSS/AddButton.css
+++ b/src/components/CSS/AddButton.css
@@ -6,6 +6,11 @@
   margin: 0.5em 0.5em;
   color: rgb(31, 65, 114);
 }
+.add-btn:hover {
+  background-color: rgb(241, 165, 187);
+  transition: 0.5s;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+}
 
 .patch-btn {
   background-color: none;
