--- a/src/components/CSS/FormLIst.css
+++ b/src/components/CSS/FormLIst.css
@@ -1,28 +1,62 @@
+@keyframes form-animation {
+  from {
+    position: fixed; /** our container on the position that we set and dynamic when we scroll down or up */
+    z-index: 2;
+    transform: scale(0) translate(50%, 50%) skew(45deg);
+  }
+  to {
+    transform: scale(1) skew(0deg) translate(-50%, -50%);
+    position: fixed; /** our container on the position that we set and dynamic when we scroll down or up */
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+  }
+}
+
+@keyframes scale-up {
+  from {
+    transform: scale(0);
+    transform-origin: center;
+  }
+  to {
+    transform: scale(1.5);
+    color: red;
+  }
+}
+
 .container-add {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: aqua;
+  background-color: rgb(241, 180, 187);
 
   /*! center windows */
   /*? Left and top are 50% adjust our top-left to middle of vh */
   /*? and we translate -50% of width and height of container to center a container */
-  position: fixed; /** our container on the position that we set and dynamic when we scroll down or up */
+  /** our container on the position that we set and dynamic when we scroll down or up */
+  position: fixed;
   z-index: 2;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  /** we add both to prevent additional transform of components */
+  /*? transform: translate(-50%, -50%); */
 
-  padding: 5rem 4rem; /* vertical horizontal */
+  /*! padding vertical horizontal*/
+  /*! padding: 5rem 3rem; */
+
+  padding: 4em 2em 5.5em 2em;
   border-radius: 10%;
+
+  animation: form-animation 1s ease-in 1 normal both;
 }
+
 .container-patch {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rebeccapurple;
+  background-color: rgb(241, 180, 187);
 
   /*! center windows */
   /*? Left and top are 50% adjust our top-left to middle of vh */
@@ -33,6 +67,97 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  padding: 5rem 4rem; /* vertical horizontal */
+  padding: 4em 2em 5.5em 2em;
   border-radius: 10%;
+
+  animation: form-animation 1s ease-in 1 normal both;
+}
+
+.btn-exit-container {
+  position: absolute;
+  top: 7%;
+  right: 10%;
+}
+.btn-exit-container:hover {
+  cursor: pointer;
+}
+.btn-exit-container button {
+  border: none;
+  border-radius: 50%;
+  background-color: rgb(241, 180, 187);
+}
+
+.btn-exit-container:hover button {
+  animation: scale-up 0.3s ease-in-out 1 normal both;
+  cursor: pointer;
+}
+
+.name-container {
+  width: 100%;
+}
+
+.name-container input {
+  width: 100%;
+  height: 20%;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  padding: 0.5em;
+  border-radius: 5%;
+  border: none;
+  background-color: rgb(253, 240, 240);
+}
+
+.desc-container {
+  width: 100%;
+}
+
+.desc-container textarea {
+  padding: 0.5em;
+  border-radius: 5%;
+  border: none;
+  background-color: rgb(253, 240, 240);
+}
+
+.date-priorities-container {
+  margin: 0.5em;
+  position: relative;
+  width: 100%;
+}
+
+.date-priorities-container input {
+  position: absolute;
+  width: 40%;
+  right: 0;
+  background-color: rgb(253, 240, 240);
+  border: none;
+  border-radius: 5%;
+}
+
+.date-priorities-container select {
+  position: absolute;
+  width: 40%;
+  left: 0;
+  text-align: center;
+  border: none;
+  border-radius: 5%;
+  background-color: rgb(253, 240, 240);
+}
+
+.btn-container {
+  position: absolute;
+  bottom: 7%;
+}
+
+.btn-container button {
+  border: none;
+  border-radius: 5%;
+  background-color: rgb(253, 240, 240);
+  padding: 0.25em 0.5em;
+}
+
+.btn-container button:hover {
+  transition: 0.5s;
+  background-color: rgb(253, 220, 240);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
